Bug 395330 - Active downloads don't appear in download manager. r=sdwilsh, blocking-ff3=mconnor